ok last commit tonight, added weather api

--- a/notebooks/Predicting_Fire_Intensity_App_Lite.ipynb
+++ b/notebooks/Predicting_Fire_Intensity_App_Lite.ipynb
@@ -180,13 +180,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [],
    "source": [
     "fireapp = GridspecLayout(4, 3)\n",
     "fireapp[0,0] = datepicker\n",
-    "fireapp[0,2] = temperature\n",
+    "#fireapp[0,2] = temperature\n",
     "fireapp[1,0] = lat\n",
     "fireapp[2,0] = lon\n",
     "fireapp[0,1] = fuel_moist\n",
@@ -196,13 +196,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d7c8818968c4270ba7ff761deab65cb",
+       "model_id": "2cc06dd7754d44409cf15507a49cfa6d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -275,108 +275,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def weather_lookup(date, lat, lon, key=config.darksky_api1):\n",
+    "    data = []    \n",
+    "    ts = date.isoformat() \n",
+    "    lat = lat\n",
+    "    lon = lon\n",
+    "    weather = forecast(key, lat, lon, time=ts)\n",
+    "    w_dict = weather['currently']\n",
+    "    data.append(w_dict)\n",
+    "    return data\n",
+    "\n",
+    "dt = datetime(datepicker.value.year, datepicker.value.month, datepicker.value.day, 12)\n",
+    "\n",
+    "weather_df = pd.DataFrame(weather_lookup(dt, lat.value, lon.value, config.darksky_api1))\n",
+    "\n",
+    "temperature_in = weather_df.temperature.min()\n",
+    "wind_speed_in = weather_df.windSpeed.min()\n",
+    "humidity_in = weather_df.humidity.min()\n",
+    "visibility_in = weather_df.visibility.min()\n",
+    "precip_intensity_in = weather_df.precipIntensity.min()\n",
+    "wind_gust_in = weather_df.windGust.min()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30.4746\n",
-      "-86.2953\n",
-      "2019-11-05\n",
-      "2\n",
-      "2\n"
+      "_____User Inputs_____\n",
+      "Fire Start:  2019-11-05\n",
+      "Latitude:  30.4746\n",
+      "Longitude:  -86.2953\n",
+      "Fuel Moisture Class:  3\n",
+      "Prefire Fuel:  4523.28571\n",
+      "Fuelcode:  1260\n",
+      "\n",
+      "___Model Input Values___\n",
+      "Temperature:  78.25\n",
+      "Humidity:  0.77\n",
+      "Visibility:  10\n",
+      "Precip Intensity:  0.0098\n",
+      "Wind Gust:  8.04\n",
+      "Wind Speed:  5.45\n",
+      "Season:  2\n",
+      "Fire Region:  2\n",
+      "Fuel Moisture Class:  3\n",
+      "Prefire Fuel:  4523.28571\n",
+      "Fuelcode:  1260\n"
      ]
     }
    ],
    "source": [
-    "print(lat.value)\n",
-    "print(lon.value)\n",
-    "print(datepicker.value)\n",
-    "print(fire_region_in)\n",
-    "print(season_in)"
+    "print(\"_____User Inputs_____\")\n",
+    "print(\"Fire Start: \", datepicker.value)\n",
+    "print(\"Latitude: \", lat.value)\n",
+    "print(\"Longitude: \", lon.value)\n",
+    "print(\"Fuel Moisture Class: \", fuel_moist.value)\n",
+    "print(\"Prefire Fuel: \", prefire.value)\n",
+    "print(\"Fuelcode: \", fuel_code.value)\n",
+    "print(\"\")\n",
+    "\n",
+    "\n",
+    "print(\"___Model Input Values___\")\n",
+    "print(\"Temperature: \", temperature_in)\n",
+    "print(\"Humidity: \", humidity_in)\n",
+    "print(\"Visibility: \", visibility_in)\n",
+    "print(\"Precip Intensity: \", precip_intensity_in)\n",
+    "print(\"Wind Gust: \", wind_gust_in)\n",
+    "print(\"Wind Speed: \", wind_speed_in)\n",
+    "print(\"Season: \", season_in)\n",
+    "print(\"Fire Region: \", fire_region_in)\n",
+    "print(\"Fuel Moisture Class: \", fuel_moist.value)\n",
+    "print(\"Prefire Fuel: \", prefire.value)\n",
+    "print(\"Fuelcode: \", fuel_code.value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 324,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    return data\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
-     ]
-    }
-   ],
-   "source": [
-    "def weather_lookup(date, lat, lon, key=RAPIDAPI_KEY):\n",
-    "        ts = date.isoformat() \n",
-    "        weather = forecast(key, lat, lon, time=ts)\n",
-    "        w_dict = weather['currently']\n",
-    "        data.append(w_dict)\n",
-    "    return data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 325,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dt = datetime(datepicker.value.year, datepicker.value.month, datepicker.value.day, 12).isoformat()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2019-11-05T12:00:00'"
+       "('fuel_moisture_class', 'fuelcode', 'prefire_fuel')"
       ]
      },
-     "execution_count": 328,
+     "execution_count": 381,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "dt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# pull from darksky api\n",
     "'temperature', 'wind_speed','humidity','visibility', 'precip_intensity', 'wind_gust'\n",
@@ -385,31 +382,37 @@
     "'fire_region', 'season',\n",
     "\n",
     "#set by user\n",
-    "'fuel_moisture_class'\n",
-    "\n",
-    "#need to add\n",
-    "'fuelcode', 'prefire_fuel'\n"
+    "'fuel_moisture_class','fuelcode', 'prefire_fuel'\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "19.61505"
-      ]
-     },
-     "execution_count": 341,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_fires.prefire_fuel.min()"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
