--- a/notebooks/Model_Hyperparameter_Tuning.ipynb
+++ b/notebooks/Model_Hyperparameter_Tuning.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
     "import pandas as pd\n",
     "\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.ensemble import BaggingClassifier, ExtraTreesClassifier, RandomForestClassifier"
+    "from sklearn.ensemble import BaggingClassifier, ExtraTreesClassifier, RandomForestClassifier, AdaBoostClassifier"
    ]
   },
   {
@@ -48,38 +48,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(100000, 26)\n",
-      "Index(['Unnamed: 0', 'latitude', 'longitude', 'doy', 'month', 'year',\n",
-      "       'cluster_reference', 'fire_region', 'season', 'covertype', 'fuelcode',\n",
-      "       'prefire_fuel', 'fuel_moisture_class', 'temperature', 'humidity',\n",
-      "       'precip_intensity', 'visibility', 'wind_speed', 'wind_gust',\n",
-      "       'brightness', 'fire_intensity', 'fire_intensity_twocat',\n",
-      "       'fire_intensity_threecat', 'fire_intensity_fourcat', 'bright_t31',\n",
-      "       'frp'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Read the data from disk for faster access\n",
     "#df_fires = pd.read_csv('data/fires_data_smote.csv').sample(1000)\n",
     "df_fires = pd.read_csv('data/FireIntensity_Model_June12_Clean.csv').sample(100000)\n",
     "\n",
-    "print(df_fires.shape)\n",
-    "print(df_fires.columns)\n",
-    "\n",
-    "X = df_fires[['latitude', 'longitude', 'doy','temperature', 'wind_speed','humidity', 'fire_region', 'season', \n",
+    "X = df_fires[['latitude', 'longitude', 'doy','temperature', 'wind_speed','humidity', \n",
     "                 'fuelcode', 'prefire_fuel', 'fuel_moisture_class',\n",
-    "                  'precip_intensity', 'wind_gust']]\n",
+    "                   'wind_gust']]\n",
     "\n",
-    "y = df_fires[\"fire_intensity_fourcat\"].values\n"
+    "y = df_fires[\"fire_intensity_fourcat\"].values\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -175,6 +158,31 @@
     "parameters = {'n_estimators': [5, 10, 25, 50, 100], 'criterion' : ['gini', 'entropy'],\n",
     "              'max_depth': [5, 10, 25, 50], 'bootstrap':[True,False], \n",
     "              'oob_score': [True,False], 'n_jobs' : [-1]}\n",
+    "              \n",
+    "clf = GridSearchCV(model, parameters, cv=5)\n",
+    "clf.fit(X, y)\n",
+    "\n",
+    "print(clf.best_estimator_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adaboost Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use GridSearchCV to see whether we need to tune any of the  parameters.\n",
+    "model = AdaBoostClassifier()\n",
+    "\n",
+    "# Create a dictionary with the parameter option\n",
+    "parameters = {'n_estimators': [5, 10, 25, 50], 'learning_rate' : [.1, .5, 1]}\n",
     "              \n",
     "clf = GridSearchCV(model, parameters, cv=5)\n",
     "clf.fit(X, y)\n",
