--- a/experimental code/MLInputs.ipynb
+++ b/experimental code/MLInputs.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,16 @@
     "\n",
     "import config\n",
     "import config1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Expanding number of columns:\n",
+    "pd.set_option('display.max_columns', 40)"
    ]
   },
   {
@@ -87,16 +97,6 @@
     "FROM Emissions_Data\n",
     "LIMIT 50000;\n",
     "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Expanding number of columns:\n",
-    "pd.set_option('display.max_columns', 40)"
    ]
   },
   {
@@ -6147,6 +6147,96 @@
    "source": [
     "Fire_Brightness_Model5.to_sql('Fire_Intensity_Model_Clean', con = engine, if_exists = 'append', chunksize = 100000)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to bin the Brigthness numerial values for Y. Will select the quartiles as noted. \n",
+    "#2 Bins - [300 to 403.125, to 506.5]\n",
+    "\n",
+    "def get_season(brightness):\n",
+    "    \n",
+    "    if ((brightness >= 300) and (brightness <= 403.125)):\n",
+    "        b = 'Low' \n",
+    "    elif ((brightness > 309.80) and (brightness < 317.90000)):\n",
+    "        b = 'Medium'  \n",
+    "    elif ((brightness >= 317.90000) and (brightness <= 330.20000)):\n",
+    "        b = 'High' \n",
+    "    #elif ((doy > 355) and (doy < 80)):\n",
+    "        #s = 3  # winter\n",
+    "    else:\n",
+    "        b = 'Severe'\n",
+    "     #   raise IndexError(\"Invalid date\")\n",
+    "    return b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Fire_Brightness_Model_June19 = pd.read_csv('../data/FireIntensity_Model_June12_Clean.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
