working clear button

--- a/notebooks/Predicting_Fire_Intensity_App_Lite.ipynb
+++ b/notebooks/Predicting_Fire_Intensity_App_Lite.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "button = widgets.Button(description=\"Predict Fire\")\n",
+    "output = widgets.Output()\n",
+    "\n",
+    "#display(button, output)\n",
+    "\n",
+    "def on_button_clicked(b):\n",
+    "    with output:\n",
+    "        print(\"* Warming up...\")\n",
+    "        print(\"* * Finding season...\")\n",
+    "        #get season input\n",
+    "        def get_season(doy):\n",
+    "            if ((doy >= 80) and (doy <= 172)):\n",
+    "                s = 0  # spring\n",
+    "            elif ((doy > 172) and (doy < 264)):\n",
+    "                s = 1  # summer\n",
+    "            elif ((doy >= 264) and (doy <= 355)):\n",
+    "                s = 2  # fall\n",
+    "            #elif ((doy > 355) and (doy < 80)):\n",
+    "                #s = 3  # winter\n",
+    "            else:\n",
+    "                s = 3\n",
+    "             #   raise IndexError(\"Invalid date\")\n",
+    "            return s\n",
+    "        \n",
+    "        season_in = get_season(datepicker.value.timetuple().tm_yday)\n",
+    "        \n",
+    "        \n",
+    "        print(\"* * * Pulling weather data from DarkSky...\")\n",
+    "        def weather_lookup(df, key=RAPIDAPI_KEY, days_before=0, days_after=0):\n",
+    "            data = []\n",
+    "            for index, row in df.iterrows():\n",
+    "                ts = row['datetime'].isoformat() \n",
+    "                lat = row['latitude']\n",
+    "                lon = row['longitude']\n",
+    "                weather = forecast(key, lat, lon, time=ts)\n",
+    "                w_dict = weather['currently']\n",
+    "                w_dict['timestamp'] = ts\n",
+    "                w_dict['latitude'] = lat\n",
+    "                w_dict['longitude'] = lon\n",
+    "                data.append(w_dict)\n",
+    "            return data\n",
+    "        \n",
+    "        dt = datetime(datepicker.value.year, datepicker.value.month, datepicker.value.day, 12)\n",
+    "        fire_predict = pd.DataFrame(columns=['datetime', 'latitude', 'longitude'])\n",
+    "        fire_predict = fire_predict.append({'datetime': dt, 'latitude': lat.value, 'longitude': lon.value}, ignore_index=True)\n",
+    "        weather_df = pd.DataFrame(weather_lookup(fire_predict))\n",
+    "        \n",
+    "        temperature_in = weather_df.temperature.min()\n",
+    "        wind_speed_in = weather_df.windSpeed.min()\n",
+    "        humidity_in = weather_df.humidity.min()\n",
+    "        precip_intensity_in = weather_df.precipIntensity.min()\n",
+    "        wind_gust_in = weather_df.windGust.min()\n",
+    "        \n",
+    "        print(\"* * * * Calculating Intinsity...\")\n",
+    "        print(\"\")\n",
+    "        print(\"\")\n",
+    "        print(\"------Model Input Values------\")\n",
+    "        print(\"Latitude: \", lat.value)\n",
+    "        print(\"Longitude: \", lon.value)\n",
+    "        print(\"Day of Year: \", datepicker.value.timetuple().tm_yday)\n",
+    "        print(\"Fuelcode: \", fuel_code.value)\n",
+    "        print(\"Fuel Moisture Class: \", fuel_moist.value)\n",
+    "        print(\"Prefire Fuel: \", prefire.value)\n",
+    "        print(\"Temperature: \", temperature_in)\n",
+    "        print(\"Humidity: \", humidity_in)\n",
+    "        print(\"Precip Intensity: \", precip_intensity_in)\n",
+    "        print(\"Wind Gust: \", wind_gust_in)\n",
+    "        print(\"Wind Speed: \", wind_speed_in)\n",
+    "        print(\"-------------------------------\")\n",
+    "        print(\"\")\n",
+    "button.on_click(on_button_clicked)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clear = widgets.Button(description=\"Clear Results\")\n",
+    "def clear_results(b):\n",
+    "    with output:\n",
+    "        output.clear_output()\n",
+    "clear.on_click(clear_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -193,30 +285,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fireapp = GridspecLayout(4, 3)\n",
+    "fireapp = GridspecLayout(50, 3)\n",
     "fireapp[0,0] = datepicker\n",
     "fireapp[1,0] = lat\n",
     "fireapp[2,0] = lon\n",
     "fireapp[0,1] = fuel_moist\n",
     "fireapp[1,1] = fuel_code\n",
     "fireapp[2,1] = prefire\n",
-    "fireapp[0,2] = button"
+    "fireapp[0,2] = button\n",
+    "fireapp[1,2] = clear\n",
+    "fireapp[3:,0:] = output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 83,
    "metadata": {
     "scrolled": false
    },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e70c33d491ef42788d6952672493e7b5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "GridspecLayout(children=(DatePicker(value=datetime.date(2011, 6, 19), description='Fire start: ', layout=Layou…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "fireapp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "50a61e105f1045fab3536cd053cc9e8d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(outputs=({'output_type': 'stream', 'text': '* Warming up...\\n* * Finding season...\\n* * * Pulling weath…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#fireapp"
+    "output.clear_output()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -632,29 +816,7 @@
     "def on_button_clicked(b):\n",
     "    with output:\n",
     "        print(\"Warming up...\")\n",
-    "#         print(\"Finding region on map...\")\n",
-    "#         def haversine_distance(lat1, lon1, lat2, lon2):\n",
-    "#             r = 6371\n",
-    "#             phi1 = np.radians(lat1)\n",
-    "#             phi2 = np.radians(lat2)\n",
-    "#             delta_phi = np.radians(lat2 - lat1)\n",
-    "#             delta_lambda = np.radians(lon2 - lon1)\n",
-    "#             a = np.sin(delta_phi / 2)**2 + np.cos(phi1) * np.cos(phi2) *   np.sin(delta_lambda / 2)**2\n",
-    "#             res = r * (2 * np.arctan2(np.sqrt(a), np.sqrt(1 - a)))\n",
-    "#             return np.round(res, 2)\n",
-    "\n",
-    "#         distances_km = []\n",
-    "\n",
-    "#         for row in df_fires.itertuples(index=False):\n",
-    "#             distances_km.append(\n",
-    "#             haversine_distance(lat.value, lon.value, row.latitude, row.longitude)\n",
-    "#          )\n",
-    "\n",
-    "#         df_fires['DistanceFromPoint'] = distances_km\n",
-    "\n",
-    "#         fire_region_in = df_fires[df_fires.DistanceFromPoint == df_fires.DistanceFromPoint.min()].fire_region.min()\n",
-    "#         print('### remove this ###  Region: ',fire_region_in)\n",
-    "        \n",
+    "        print(\"Finding season...\")\n",
     "        #get season input\n",
     "        def get_season(doy):\n",
     "            if ((doy >= 80) and (doy <= 172)):\n",
