Final Hyperparameter Tuning

--- a/notebooks/Model_Hyperparameter_Tuning.ipynb
+++ b/notebooks/Model_Hyperparameter_Tuning.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,8 +90,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BaggingClassifier(max_features=1, max_samples=10, n_estimators=5, n_jobs=-1,\n",
-      "                  oob_score=True)\n"
+      "BaggingClassifier(bootstrap_features=True, max_features=1, max_samples=1,\n",
+      "                  n_estimators=5, n_jobs=-1, oob_score=True)\n"
      ]
     }
    ],
@@ -120,9 +120,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ExtraTreesClassifier(bootstrap=True, max_depth=10, n_jobs=-1, oob_score=True)\n"
+     ]
+    }
+   ],
    "source": [
     "# Use GridSearchCV to see whether we need to tune any of the  parameters.\n",
     "model = ExtraTreesClassifier()\n",
@@ -147,9 +155,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForestClassifier(criterion='entropy', max_depth=10, n_jobs=-1,\n",
+      "                       oob_score=True)\n"
+     ]
+    }
+   ],
    "source": [
     "# Use GridSearchCV to see whether we need to tune any of the  parameters.\n",
     "model = RandomForestClassifier()\n",
@@ -174,9 +191,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AdaBoostClassifier(learning_rate=0.1, n_estimators=5)\n"
+     ]
+    }
+   ],
    "source": [
     "# Use GridSearchCV to see whether we need to tune any of the  parameters.\n",
     "model = AdaBoostClassifier()\n",
