near final models

--- a/notebooks/Final_Model_Evaluation.ipynb
+++ b/notebooks/Final_Model_Evaluation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bagging & ExtraTrees Classifier Wild Fire Model Evaluation\n",
+    "# Bagging and ExtraTrees Classifier Wild Fire Model Evaluation\n",
     "\n",
     "This notebooks will tune and run Bagging and Extra Trees classifier on wildfire dataset in order to make a predecction on fire intensity.\n"
    ]
@@ -20,23 +20,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The scikit-learn version is 0.23.1.\n",
-      "hi mom\n"
+      "The scikit-learn version is 0.23.1.\n"
      ]
     }
    ],
    "source": [
     "#optional code to ensure everyone is on the right version\n",
     "import sklearn\n",
-    "print('The scikit-learn version is {}.'.format(sklearn.__version__))\n",
-    "print(\"hi mom\")"
+    "print('The scikit-learn version is {}.'.format(sklearn.__version__))\n"
    ]
   },
   {
